--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,14 @@
+%base_typography{
+	font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+	font-size: 16px;
+	letter-spacing: 1px;
+	line-height: 1.6;
+}
+%misc_vars{
+	--header-height: 48px;
+}
+
 :root{
-	line-height: 1.2;
 	-webkit-text-size-adjust: 100%;
 	width:100%;
 	height:100%;
@@ -9,15 +18,16 @@
 }
 
 body{
+	@extend %base_typography;
+	@extend %misc_vars;
 	margin:0;
-	font-family: 'Open Sans', sans-serif;
-	font-size: var(--base-font-size);
 	width:100%;
 	height:100%;
 	background: var(--background-base);
 	color: var(--text-base);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeSpeed;
 }
 *,
 ::before,
@@ -76,6 +86,8 @@ pre{
 p,ul,ol,dl,address{
 	line-height: 1.5;
 }
+ul{list-style: circle inside;}
+ol{list-style: decimal inside;}
 kbd,samp{
 	font-family: monospace, monospace;
 	font-size: 1rem;
@@ -151,6 +163,9 @@ template{display: none;}
 
 
 table{
+	border-spacing: 0;
+	width: 100%;
+	contain: layout;
 
 	caption{
 		font-size: 115%;
@@ -202,6 +217,7 @@ form{
 	padding:0;
 	border:0;
 	outline:0;
+	contain: layout;
 
 	fieldset{
 		padding: 0.35rem 0.75rem 0.625rem;
@@ -226,30 +242,3 @@ form{
 		}
 	}
 }
-
-/*@keyframes jammer_progressbar{
-	to{}
-}
-progress,
-::-webkit-progress-bar{
-	-webkit-appearance: none;
-	appearance: none;
-	border: 0;
-	margin: 0;
-	padding: 0;
-	display:block;
-	width: 100%;
-	height: 0.25rem;
-	background: var(--background-base);
-
-	&::-webkit-progress-value{
-		background:var(--main-color);
-	}
-	&::-moz-progress-bar{
-		background: var(--main-color);
-	}
-	&:not([value])::-webkit-progress-value,
-	&:not([value])::-moz-progress-bar{
-		width: 100% !important;
-	}
-}*/
